# unn

./: .gitignore  LICENSE  README.md  pyproject.toml  unn.ipynb  unn.py
test/: test_all.py
unn/: __main__.py  linalg.py  mnist.py  neuralnet.py
