[tool.poetry]
name = "unn"
version = "1.0.0"
description = "Reference implementation of neural network for recognizing handwritten digits — written completely from scratch in pure Python"
authors = ["hacksparr0w <hacksparr0w@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
numpy = "^1.20.1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
